--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
   </head>
   <body>
     <h1>Here you will learn more about functions and how to use them.</h1>
-    <h3></h3>
+    <h3>Use these in the devtools toget different responses</h3>
+    <ul>
+      <li>
+        "console.log(jumpOverFence(fox))" should give "Jumped Over The Lazy Dog
+        Over The Fence"
+      </li>
+      <li>"console.log(isEvenOrOdd(10))" should be true</li>
+      <li>"console.log(isEvenOrOdd(5))" should be false</li>
+      <li>"console.log(celsiusToFahrenheit(30))" should give 86</li>
+      <li>"console.log(celsiusToFahrenheit(0))" should give 32</li>
+      <li>"console.log(findMaxNumber([1, 2, 3, 4, 5]))" should give 5</li>
+      <li>"sayHelloWorld()" should send "hello world" after 2 seconds</li>
+      <li>"console.log(squareNumber(4))" should give 16</li>
+      <li>
+        "console.log(repeatString("Hello"))" should give "hellohellohello"
+      </li>
+      <li>"console.log(scopingData())" should say "hello world"</li>
+      <li>
+        "console.log(reverseString("Hello"))" should reverse the word given
+      </li>
+      <li>
+        "console.log(randomNumber())" should give a random number between 1 and
+        10
+      </li>
+      <li>"console.log(findLargestNumber([3, 6, 2, 8, 4]))" should give 8</li>
+      <li>
+        "console.log(removeDuplicates([1, 2, 2, 3, 4, 4, 5]))" should make it so
+        there are no repeat numbers
+      </li>
+      <li>
+        "console.log(filterEvenNumbers([1, 2, 3, 4, 5]))" should only give 2 and
+        4
+      </li>
+      <li>
+        "console.log(filterArray([1, 2, 3, 4, 5], 2))" make the list go "3, 4,
+        5, 1, 2"
+      </li>
+      <li>
+        "console.log(rotateArray([1, 2, 3, 4, 5], 2))" make the list go "4, 5,
+        1, 2, 3"
+      </li>
+    </ul>
 
     <script src="./functions-part1.js"></script>
     <script src="./functions-part2.js"></script>
